[gd_scene load_steps=5 format=2]

[ext_resource path="res://ExamineBox.gd" type="Script" id=1]
[ext_resource path="res://inventoryTest.gd" type="Script" id=2]
[ext_resource path="res://PresentBox.gd" type="Script" id=3]
[ext_resource path="res://evidence/bg.png" type="Texture" id=6]

[node name="InventoryTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExamineBox" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = -190.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
color = Color( 0.00784314, 0.192157, 0, 0.117647 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ExamineBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -7.0
margin_right = 24.5
margin_bottom = 7.0
text = "Examine"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EvidenceContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer/EvidenceContainer"]
margin_right = 69.0
margin_bottom = 128.0
text = "Evidence"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/EvidenceContainer"]
margin_left = 73.0
margin_right = 1024.0
margin_bottom = 128.0
size_flags_horizontal = 3
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evidences" type="HBoxContainer" parent="VBoxContainer/EvidenceContainer/ScrollContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PresentBox" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.117647 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PresentBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -7.0
margin_right = 24.5
margin_bottom = 7.0
text = "Present"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EvidenceDialog" type="WindowDialog" parent="."]
margin_right = 370.0
margin_bottom = 146.0
popup_exclusive = true
window_title = "Evidence"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EvidenceDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -25.0
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="EvidenceDialog/HBoxContainer"]
margin_right = 96.0
margin_bottom = 114.0

[node name="bg" type="TextureRect" parent="EvidenceDialog/HBoxContainer/VBoxContainer"]
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 6 )

[node name="Icon" type="TextureRect" parent="EvidenceDialog/HBoxContainer/VBoxContainer/bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="EvidenceDialog/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 96.0
margin_bottom = 114.0
text = "Evidence"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="RichTextLabel" parent="EvidenceDialog/HBoxContainer"]
margin_left = 100.0
margin_right = 356.0
margin_bottom = 114.0
size_flags_horizontal = 3
text = "Sample Text"

[node name="Button" type="Button" parent="EvidenceDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -23.0
margin_right = 49.0
margin_bottom = -3.0
text = "Use Evidence"

[connection signal="show_popup" from="ExamineBox" to="." method="_on_evidence_popup"]
[connection signal="pressed" from="VBoxContainer/EvidenceContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="EvidenceDialog/Button" to="." method="_on_PresentButton_pressed"]
